--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
                             <form action="" id="book-form">
                                 <div class="form-group">
                                     <label for="title">Title</label>
-                                    <input type="text" class="title form-control" id="title" placeholder="Enter book's title...">
+                                    <input type="text" class="title form-control" id="title" placeholder="Enter book's title..." autocomplete="off">
                                 </div>
                                 <div class="form-group">
                                     <label for="author">Author</label>
-                                    <input type="text" class="author form-control" id="author" placeholder="Enter book's author...">
+                                    <input type="text" class="author form-control" id="author" placeholder="Enter book's author..." autocomplete="off">
                                 </div>
                                 <div class="form-group">
                                     <label for="isbn">ISBN</label>
-                                    <input type="text" class="isbn form-control" id="isbn" placeholder="Enter book's ISBN...">
+                                    <input type="text" class="isbn form-control" id="isbn" placeholder="Enter book's ISBN..." autocomplete="off">
                                 </div>
                                 <button type="submit" class="btn btn-primary btn-block mb-3">SUBMIT</button>
                             </form>
@@ -32,7 +32,7 @@
                         <div class="jumbotron py-4 mb-0">
                             <div class="form-group">
                                 <label for="filter">Search</label>
-                                <input type="text" class="form-control" id="filter" placeholder="Enter the book's title, author or ISBN...">
+                                <input type="text" class="form-control" id="filter" placeholder="Enter the book's title, author or ISBN..." autocomplete="off">
                             </div>
                             <table class="table table-hover">
                                 <thead class="thead-dark">
